--- a/index.html
+++ b/index.html
@@ -60,44 +60,34 @@
     </header>
     
 
-<!-- HELLO LOADING BAR
-    <div class="container mt-4 mb-4">
-        Becoming Front-End Developer...
-        <div class="progress">
-            <div class="progress-bar" style="width:10%" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
-            </div>
-        </div>
-    </div>
--->
-
     <!-- HELLO GALLERY -->
-    <div class="container mt-2">
-        <h2 class="text-center mb">PROJECTS</h2>
+    
+    <div class="container">
 
-        <div class="row mt-4 mb-4" style="height: 500px;">
-            <div class="col-md-4 offset-md-1 bg-dark mh-75">  
-                <img src="images/brand/Placeholder.png" class="img-fluid" alt="Some meta about the image"> 
-                <h2 class="text-center">Een project</h2>
+        <div class="row">
+            <div class="col-md-4 offset-md-1 justify-content-center bg-dark"> <!-- d-flex justify-content-center -->
+                <div class="card mt-3 mb-3 bg-transparent">
+                    <img src="images/IFD.png" class="card-img-top p-3" alt="...">
+                    <div class="card-body text-center text-light">
+                        <h5 class="card-title">PROJECT</h5>
+                        <p class="card-text-center">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-4 offset-md-2 bg-dark">                  
-                <img src="images/IFD.png" class="img-fluid" alt="Some meta about the image">
-                <h2 class="text-center">Een project</h2>
-            </div>
-        </div>
-
-        <div class="row mt-4 mb-4" style="height: 500px;">
-            <div class="col-md-4 offset-md-1 bg-dark">  
-                <img src="images/brand/Placeholder.png" class="img-fluid" alt="Some meta about the image"> 
-                <h2 class="text-center">Een project</h2>
-            </div>
-            <div class="col-md-4 offset-md-2 bg-dark">                  
-                <img src="images/IFD.png" class="img-fluid" alt="Some meta about the image">
-                <h2 class="text-center">Een project</h2>
-            </div>
-        </div>
 
 
+            <div class="col-md-4 offset-md-2 d-flex justify-content-center bg-dark">  
+                <div class="card mt-3 mb-3">
+                    <img src="images/IFD.png" class="card-img-top" alt="..."> 
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text-center">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+        </div>  
     </div>
+
 
     <!-- HELLO FOOTER-->
     <footer>
