--- a/index.html
+++ b/index.html
@@ -103,8 +103,9 @@
                         </div>
                     </div>
                 </div>
+            </div>
 
-
+            <div class="row justify-content-center">
                 <div class="col-md-4">
                     <div class="card">
                         <img src="images/TV2.jpg" class="card-img-top p-4" alt="...">
