--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About Me</a>
+                            <a class="nav-link" href="about.html">About Me</a>
                         </li>
                     </ul>
                 </div>
