--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             </a>
 
                             <div class="dropdown-menu bg-dark border-0" aria-labelledby="navbarDropdown"> <!-- BG-DARK? -->
-                                <a class="dropdown-item" href="---.html">Project 1</a>
+                                <a class="dropdown-item" href="testSidefillGrid.html">Grid-Testing</a>
                                 <a class="dropdown-item" href="---.html">Project 2</a>
                                 <a class="dropdown-item" href="---.html">Project 3</a>
                                 <a class="dropdown-item" href="---.html">Project 4</a>
@@ -156,7 +156,7 @@
                     </div>    
                 </div>
 
-                <div class="col-md-3">
+                <div class="col-md-3 align-self-center">
                     <div class="card">
                         <div class="card-body">
                             <a class="btn btn-social" href="#!" role="button">
@@ -167,7 +167,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-3">
+                <div class="col-md-3 align-self-center">
                     <div class="card">
                         <div class="card-body">
                           ...
