--- a/parrallex.html
+++ b/parrallex.html
@@ -10,9 +10,7 @@
     <title>Portfolio</title>
     <link rel="icon" type="image/x-icon" href="images/brand/PortfolioBrand30x30.png">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/2.1.3/parallax.min.js" defer></script>
-    <script src="js/parrallex.js" defer></script>
+    
 </head>
 
 <body>
@@ -102,4 +100,7 @@
 
 </body>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/2.1.3/parallax.min.js"></script>
+<script src="js/parrallex.js"r></script>
 </html>
