--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Silkscreen&display=swap" rel="stylesheet">
 
     <script src="js/site.js" defer></script>
-    <script src="js/api_weather.js" defer></script>
+    <script src="js/api.js" defer></script>
 </head>
 
 
@@ -81,6 +81,10 @@
                 
                 <div class="col-8 bg-info">
                     <h5 id="weather-output"></h5>
+                </div>
+
+                <div class="col-8 bg-info bg-dark">
+                    <h5 id="zelda-output"></h5>
                 </div>
 
 
